# Process_Ransomware

./: Cargo.toml  README.md
.vim/: coc-settings.json
proc/: Cargo.toml
proc-common/: Cargo.toml
proc-common/src/: lib.rs
proc-ebpf/: Cargo.toml
proc-ebpf/src/: main.rs
proc/src/: main.rs
xtask/src/: build_ebpf.rs  run.rs
